fix(theme): fix remember checkbox align, fix #2292

--- a/packages/theme/src/client/modules/encrypt/styles/password-modal.scss
+++ b/packages/theme/src/client/modules/encrypt/styles/password-modal.scss
@@ -118,8 +118,9 @@
     input[type="checkbox"] {
       position: relative;
 
+      vertical-align: text-bottom;
+
       width: 0;
-      height: 14px;
       margin-right: 18px;
 
       cursor: pointer;
